--- a/config.json
+++ b/config.json
@@ -13,5 +13,5 @@
   "icon": "https://i.imgur.com/DHV83NM.png",
   "icon_background": "#FFFFFF",
   "disable_stop": true,
-  "poster": "https://i.imgur.com/Wo7XOMm.png"
+  "poster": "https://user-images.githubusercontent.com/48245050/182639671-4b182b0a-e13c-4736-b8f7-53291f1e7373.png"
 }
