--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
     "videos"
   ],
   "description": "Import selected videos from Team Files to selected destination",
-  "docker_image": "supervisely/base-py-sdk:6.35.0",
+  "docker_image": "supervisely/import-videos-team-files:1.0.0",
   "main_script": "src/main.py",
   "gui_template": "src/gui.html",
   "task_location": "workspace_tasks",
